[project]
name = "Prova-Capstone"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "AntoS127", email = "antonio1.sannino@mail.polimi.it"},
]
dependencies = ["pandas>=2.3.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
